chore(backend): replace Collectors.toList