@@ -52,7 +52,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import javax.crypto.SecretKey;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.hamcrest.Matchers;
@@ -206,7 +205,7 @@ public class AuthenticationControllerIntegrationTest {
       final var groups =
           ldapConfigProperties.getRoles().stream()
               .map(m -> new UserRoleMapping(m.getSrc(), m.getDst()))
-              .collect(Collectors.toList());
+              .toList();
       ldapConfigProperties.getRoles().clear();
 
       assertThat(
@@ -230,7 +229,7 @@ public class AuthenticationControllerIntegrationTest {
       final var groups =
           ldapConfigProperties.getRoles().stream()
               .map(m -> new UserRoleMapping(m.getSrc(), m.getDst()))
-              .collect(Collectors.toList());
+              .toList();
       ldapConfigProperties.setRoles(
           List.of(
               new UserRoleMapping(
@@ -256,7 +255,7 @@ public class AuthenticationControllerIntegrationTest {
       final var groups =
           ldapConfigProperties.getRoles().stream()
               .map(m -> new UserRoleMapping(m.getSrc(), m.getDst()))
-              .collect(Collectors.toList());
+              .toList();
 
       ldapConfigProperties.setUpdateRole(true);
       ldapConfigProperties.getRoles().clear();
@@ -286,7 +285,7 @@ public class AuthenticationControllerIntegrationTest {
       final var groups =
           ldapConfigProperties.getRoles().stream()
               .map(m -> new UserRoleMapping(m.getSrc(), m.getDst()))
-              .collect(Collectors.toList());
+              .toList();
 
       ldapConfigProperties.setUpdateRole(true);
       ldapConfigProperties.setRoles(groups);
@@ -319,7 +318,7 @@ public class AuthenticationControllerIntegrationTest {
       final var groups =
           ldapConfigProperties.getRoles().stream()
               .map(m -> new UserRoleMapping(m.getSrc(), m.getDst()))
-              .collect(Collectors.toList());
+              .toList();
       ldapConfigProperties.getRoles().clear();
 
       doLogin(loginData);
